# CMakeTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
aLib/: BookItem.cpp  BookItem.h  CMakeLists.txt  Date.cpp  Date.h  Inventory.cpp  Inventory.h  InventoryItem.cpp  InventoryItem.h  MusicItem.cpp  MusicItem.h
aTest/: CMakeLists.txt  aTest01.cpp
theApp/: CMakeLists.txt  theApp.cpp
